<resources>
    <string name="app_name">Aplikasi Github User</string>
    <string name="search">Search User</string>
    <string name="avatar_picture">Avatar Picture</string>
    <string name="user_name">name</string>
    <string name="user_type">Type</string>
    <string name="user_username">username</string>
    <string name="text_count">0</string>
    <string name="user_followers">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_repositories">Repositories</string>
    <string name="user_location">-</string>
    <string name="user_company">-</string>
    <string name="not_found">User Not Found</string>
    <string name="created_by">created by opakpakri</string>
    <string name="tab">Tab</string>
    <string name="text_content">Try To Search Username</string>
    <string name="setting">setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_empty">Favorite is Empty</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="mynama">Aufa Fakhri Tiyo Widodo</string>
    <string name="he_him">(He/Him)</string>
    <string name="myemail">aufa123fakhri@gmail.com</string>
    <string name="mylinkedin">aufafakhri</string>
    <string name="mygithub">opakpakri</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">Github</string>
</resources>